Duplicated object share Shape Key Animation Data like linked #80016

Closed
opened 2020-08-22 16:08:37 +02:00 by Joe Larson · 10 comments

System Information
Operating system: Windows 10
Graphics card: NVidia GeForce RTX 2060

Blender Version
Broken: 2.90.0 Beta
Caused by 7b1c406b54

Short description of error
If a duplicated object has shapekey data, a unlinked duplicate of that object will have linked shapekey aniamtion data.

Exact steps for others to reproduce the error
https://youtu.be/xSGake54S-8

  • With the default cube selected, in the ObjectData Properties tab of the Object Properties panel Add a Basis shapekey, and then add a second shape key
  • With the second shape key selected, enter edit mode and alter the default cube to give the shapekey some data
  • Exit edit mode
  • On frame 0, create a key frame on the shape key value
  • On frame 10, set the shape key Value to 1 and create a key frame
  • Duplicate the default cube and move the duplicate somewhere
  • Move the key frames on either the duplicate or the original, and see that the other's key frames are effected as though they were linked duplicates
  • Change the value of the key frames in the graph editor and see that the other's key frames are likewise altered as though they were also linked
  • Add a new keyframe. They both get the new one.

Near as I can find there is no way to make their key frames editable independently.

Transformation animations are not so linked.

**System Information** Operating system: Windows 10 Graphics card: NVidia GeForce RTX 2060 **Blender Version** Broken: 2.90.0 Beta Caused by 7b1c406b54 **Short description of error** If a duplicated object has shapekey data, a unlinked duplicate of that object will have linked shapekey aniamtion data. **Exact steps for others to reproduce the error** https://youtu.be/xSGake54S-8 - With the default cube selected, in the ObjectData Properties tab of the Object Properties panel Add a Basis shapekey, and then add a second shape key - With the second shape key selected, enter edit mode and alter the default cube to give the shapekey some data - Exit edit mode - On frame 0, create a key frame on the shape key value - On frame 10, set the shape key Value to 1 and create a key frame - Duplicate the default cube and move the duplicate somewhere - Move the key frames on either the duplicate or the original, and see that the other's key frames are effected as though they were linked duplicates - Change the value of the key frames in the graph editor and see that the other's key frames are likewise altered as though they were also linked - Add a new keyframe. They both get the new one. Near as I can find there is no way to make their key frames editable independently. Transformation animations are not so linked.
Author

Added subscriber: @3dpprofessor

Added subscriber: @3dpprofessor
Contributor

Added subscriber: @RedMser

Added subscriber: @RedMser
Contributor

Duplicating an object with animated shape key data seems to link to the same action: image.png

As a workaround, you can right-click the key's action and "Make Single User".
But this seems like a bug to me, considering how User Preferences -> Editing -> Duplicate Data -> Action works just fine for object's actions.

Duplicating an object with animated shape key data seems to link to the same action: ![image.png](https://archive.blender.org/developer/F8808246/image.png) As a workaround, you can right-click the key's action and "Make Single User". But this seems like a bug to me, considering how `User Preferences -> Editing -> Duplicate Data -> Action` works just fine for object's actions.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-08-24 15:43:37 +02:00
Member

Can confirm, checking...

Can confirm, checking...
Member

Caused by 7b1c406b54

Note this looked correct in 13f591d400, so seems like a typo in 7b1c406b54.

Caused by 7b1c406b54 Note this looked correct in 13f591d400, so seems like a typo in 7b1c406b54.
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58

This issue was referenced by 3ea324488a

This issue was referenced by 3ea324488ac9a45cb96d6fc98f4021a38e2ff20f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80016
No description provided.